fix(product): fix dependency injection and Redis cache serialization
Fixed issues identified by IDE linter and improved code quality:

Code Cleanup:
- Remove unused imports (Currency, Optional, Collectors, FieldError, ProductCategory, ProductStatus)
- Remove unused variables in tests (existingProduct)
- Modernize Java 17 syntax (.toList() instead of .collect(Collectors.toList()))

These changes resolve all Java problems reported by VS Code extension.
All 58 unit tests continue passing.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>