@@ -6,11 +6,9 @@ import com.enterprise.product.domain.exception.InsufficientStockException;
 import com.enterprise.product.domain.exception.ProductNotFoundException;
 import jakarta.servlet.http.HttpServletRequest;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -112,7 +110,7 @@ public class GlobalExceptionHandler {
         .getFieldErrors()
         .stream()
         .map(error -> error.getField() + ": " + error.getDefaultMessage())
-        .collect(Collectors.toList());
+        .toList();
 
     log.warn("Validation failed: {}", errors);
 
